Reparenting cleanup by Timo Korvola

This fixes reparenting fights that occur between Sawfish and the KDE system tray. Both try to reparent system tray icons as they are mapped, leading to a lot of flicker and an unpredictable end result. After the patch, Sawfish will reparent windows to their frames at MapRequest time, never at MapNotify. Also, windows that are unmapped by the client should normally be reparented to the root, but if the unmapping was caused by the window being reparented by some other client, problems ensue. So we check for that.

The patch also fixes an exotic race condition triggered at least with old versions of Monodevelop http://bugzilla.gnome.org/show_bug.cgi?id=308155 and Gnome Power Manager. Current versions of both programs don't expose the issue anymore. It was discussed on the mailing list http://mail.gnome.org/archives/sawfish-list/2007-February/msg00015.html and the follow up http://mail.gnome.org/archives/sawfish-list/2007-March/msg00000.html There's a proof of concept ( http://mail.gnome.org/archives/sawfish-list/2007-March/msg00007.html ) available that should demonstrate the bug, a window isn't decorated if unmapped during the first reparenting.


svn path=/trunk/; revision=4210